--- a/denteez/styles/styles.scss
+++ b/denteez/styles/styles.scss
@@ -1,11 +1,11 @@
 .wrapper {
-    max-width: 1440px;
+    /*max-width: 1440px;*/
     width: 100%;
     font-style: "Arial",sans-serif;
     
     //HEADER//////////////////////////////////////
-    header {
-        max-width: 1440px;
+    /*header {
+        //max-width: 1440px;
         width: 100%;
         background-color: #87b448;
         border-bottom: 3px solid #71973c;
@@ -31,11 +31,17 @@
                 
             }
             
+            .wrap__search {
+                display: inline-block;
+                max-width: 778px;
+                width: 100%;
+                float: right;
+                margin-right: 0.22%;
             .search__company {
                 position: absolute;
                 top: 17px;
                 border-radius: 2px;
-                margin-left: 27px;
+                //margin-left: 27px;
                 border: none;
                 background-color:#73993d;
                 height: 35px;
@@ -46,7 +52,7 @@
             
             .submit-search {
                 position: absolute;
-                margin-left: 30px;
+                //margin-left: 30px;
                 background-color: transparent;
                 border: none;
                 z-index: 20;
@@ -63,11 +69,12 @@
                 position: relative;
             }
             
-            .chat,
-            .ring {
-                position: absolute;
-                margin-left: 491px;
+            .chat {
+                //position: absolute;
+                //margin-left: 491px;
+                float: right;
                 margin-top: 14px;
+                margin-right: 1.7%;
                 background: url("../img/sprite.png") no-repeat;
                 background-position: -15px -8px;
                 height: 20px;
@@ -75,14 +82,22 @@
             }
             
             .ring {
-                margin-left:  534px;
+                //margin-left:  534px;
+                float: right;
+                margin-top: 14px;
+                background: url("../img/sprite.png") no-repeat;
                 background-position: -50px -5px;
                 height: 23px;
+                width: 30px;
+                margin-right: 3.7%;
                 
             }
             .user {
                 display: inline-block;
-                margin-left: 63%;
+                //margin-left: 63%;
+                float: right;
+                margin-right: 1.19%;
+                margin-top: 5px;
             
                 .user__img {
                     background: url("../img/sprite.png") no-repeat;
@@ -100,6 +115,14 @@
                     font-size: 14px;
                     letter-spacing: 0.7px;
                 }
+                
+                
+            }
+            
+            .clearfix::after {
+                content: "";
+                display: table;
+                clear: both;
             }
             
             input::-webkit-input-placeholder {
@@ -108,8 +131,162 @@
             
             
         }
+        }
+    }*/
+    header {
+        //max-width: 1440px;
+        width: 100%;
+        background-color: #87b448;
+        border-bottom: 3px solid #71973c;
+        
+        nav {
+            padding-left: 15px;
+            padding-right: 15px;
+            padding-top: 10px;
+            max-width: 940px;
+            width: 100%;
+            height: 55px;
+            margin: 0 auto;
             
-    }
+            .header__logo-wrap {
+                //display: inline-block;
+                float: left;
+                margin-right: -130px;
+                .logo__link {
+                    display: block;
+                    background: url("../img/logo.png") no-repeat;
+                    background-size: cover;
+                    width: 130px;
+                    height: 40px;
+                }
+                
+            }
+            
+            .search__user-wrap {
+                padding-left: 130px;
+                
+                .user__wrap {
+                    float:right;
+                    margin-left: -323px;//22%
+                    width: 323px;//22%
+                    margin-right: 1%;
+                
+                    .chat {
+                //position: absolute;
+                //margin-left: 491px;
+                        float: right;
+                        margin-top: 2%;
+                        margin-right: 4%;
+                        background: url("../img/sprite.png") no-repeat;
+                        background-position: -15px -8px;
+                        height: 20px;
+                        width: 30px;
+                    }
+            
+                    .ring {
+                        /*margin-left:  534px;*/
+                        float: right;
+                        margin-top: 1.8%;
+                        background: url("../img/sprite.png") no-repeat;
+                        background-position: -50px -5px;
+                        height: 23px;
+                        width: 30px;
+                       margin-right: 8.9%;
+                
+                    }
+                    .clearfix::after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+                    .user {
+                        display: inline-block;
+                        /*margin-left: 63%;*/
+                        float: right;
+                        margin-right: 1.19%;
+                        margin-top: 5px;
+            
+                        .user__img {
+                            background: url("../img/sprite.png") no-repeat;
+                            background-position: -87px -8px;
+                            height: 33px;
+                            width: 34px;
+                
+                        }
+                
+                        .user__name {
+                            color: white;
+                            display: inline-block;
+                            vertical-align: 65%;
+                            margin-left: 5px;
+                            font-size: 14px;
+                            letter-spacing: 0.7px;
+                        }
+                    }
+                
+            }////user_-wrap
+                
+                 .wrap__search {
+                    padding-right: 323px;
+                     margin-left: 3.9%;
+    margin-top: 1%;
+                    /*max-width: 778px;
+                    width: 100%;
+                    float: right;*/
+                   // margin-right: 0.22%;
+            
+                
+                    .search__company {
+                        //position: absolute;
+                        top: 17px;
+                        border-radius: 2px;
+                        //margin-left: 27px;
+                        border: none;
+                        background-color:#73993d;
+                        height: 35px;
+                        max-width: 435px;
+                        width: 100%;
+                        padding-left: 30px;
+                        color: white;
+                    }
+                     
+                     input::-webkit-input-placeholder {
+                        margin-left: 1px;
+                    }
+            
+                    .submit-search {
+                        position: absolute;
+                        //margin-left: 30px;
+                        background-color: transparent;
+                        border: none;
+                        height: 30px;
+                        z-index: 20;
+                    }
+            
+                    .icon-search-1 {
+                        z-index: 25;
+                        color: #87b448;
+                        font-size: 22px;
+                        font-size: 22px;
+                        display: inline-block;
+                        margin-top: 23%;
+                        left: -5px;
+                        position: relative;
+                    }
+                }//wrap__search
+            
+            }//search__user-wrap
+            
+           
+            
+            
+            
+            
+           
+            
+            
+        }//nav
+        }
     //END HEADER//////////////////////////////////////
     
     ///CONTENT////////////////////////////////////////
@@ -117,23 +294,13 @@
         max-width: 970px;
         width: 100%;
         margin: 0 auto;
-        
-        .column__left,
-        .column__center,
-        .column__right {
+       
+        /////COLUMN LEFT//////////////////////
+        .column__left {
             display: inline-block;
             float: left;
             width: 213px;//243
-            
-        }
-        
-        .column__center {
-            max-width: 484px;//484
-            width: 100%;
-        }
-        
-        /////COLUMN LEFT//////////////////////
-        .column__left {
+            margin-right: -243px;//213px
             padding-left: 15px;
             padding-right: 15px;
             .column__left-wrapper {
@@ -338,8 +505,11 @@
             }
             }
         }///End COLUMN LEFT////////////////
+        .content-wrap {
+            padding-left: 243px;
         //Column CENTER////////////////////
         .column__center {
+            padding-right: 243px;
             
             ///MODAL WINDOW
             .modalWindow {
@@ -396,6 +566,7 @@
                 font-weight: 100;
             }
             .add__btn {
+                float: right;
                 width: 146px;
                 height: 30px;
                 border: none;
@@ -403,8 +574,8 @@
                 background: #87b448;
                 color: white;
                 font-size: 14px;
-                margin-left: 110px;
-                top: -5px;
+                //margin-left: 110px;
+                top: 12px;
                 position: relative;
             }
             .column__center__block:nth-child(2),
@@ -414,11 +585,11 @@
             .column__center__block:nth-child(14),
             .column__center__block:nth-child(17),
             .column__center__block:nth-child(20) {
-                margin-right: 18px;
-                margin-left: 15px;
+                margin-right:3.7%;// 18px;
+                margin-left:3%;// 15px;
             }
             
-            .column__center__block:nth-child(7),
+            /*.column__center__block:nth-child(7),
             .column__center__block:nth-child(8),
             .column__center__block:nth-child(9) {
                 margin-top: 19px;
@@ -432,7 +603,7 @@
             .column__center__block:nth-child(21) {
                 margin-top: 17px;
             
-            }
+            }*/
             /////SEARCH//////////////////////
             .wrapper__search {
                 display: none;
@@ -466,11 +637,12 @@
                     float: left;
                     width: 30%;
                     margin-bottom: 15px;
+                    
                     .clearfix::after {
                     content: "";
                     display: table;
                     clear: both;
-                }
+                    }
                 
             
                     
@@ -522,9 +694,10 @@
             /////END SEARCH//////////////////
             .column__center-wrap {
                 /*padding: 15px;*/
-                padding-left: 13px;
+                /*padding-left: 13px;
                 padding-top: 15px;
-                padding-bottom: 15px;
+                padding-bottom: 15px;*/
+                padding: 3%;
                 border: 1px solid #e0e2e6;
                 border-radius: 5px;
                 margin-top: 6px;
@@ -549,31 +722,40 @@
                     display: inline-block;
                     text-align: center;
                     float: left;
-                    width: 30%;
-                    margin-bottom: 15px;
+                    max-width: 140px;
+                    width: 100%;
+                    min-width: 75px;
+                    /* width: 30.467%; */
+                    margin-bottom:1%;// 15px;
                     .column__center__block-name {
                         display: inline-block;
-                        width: 120px;
+                        width:90%;// 120px;
                         padding-top: 16px;
                         font-size: 12px;
                         letter-spacing: 0.3px;
                         
                     }
                     .rectangle {
-                        height: 80px;
-                        width: 80px;
+                        /*height: 80px;
+                        width: 80px;*/
                         /*padding: 35px 24px 24px 34.5px;*/
-                        padding: 35px 29px 23px 29px ;
+                        /*padding: 35px 29px 23px 29px ;*/
                         border: 1px solid #e0e2e6;
+                        width: 100%;
+                        margin: auto;
+                        overflow: hidden;
+                        
                         .link__block {
                             display: inline-block;
                             background: url("../img/sprite.png");
                             height: 69px;
                             width: 69px;
+                            margin-top: 25%;
                         }
                         .link__block1 {
                             background-position: -7px -79px;
                         }
+                        
                         
                         .link__block2 {
                             background-position: -80px -78px;
@@ -696,6 +878,12 @@
                         }
                     }
                     
+                    .rectangle:before {
+                        content: "";
+                        padding-top: 100%;
+                        float: left;
+                    }
+                    
                     .column__center__block:nth-child(2) {
                         padding-top: 29px;
                         padding-left: 34px;
@@ -709,6 +897,9 @@
         }//END COLUMN CENTER
         //COLUMN RIGHT///////////////////////////////
         .column__right {
+            float: right;
+            width: 213px;
+            margin-left: -243px;
              padding: 15px;
             .column__right-wrapper {
                
@@ -891,6 +1082,7 @@
         }
             
         }//END COLUMN RIGHT///////////////////////////
+        }
     }//END CONTENT////////////////////////////////////
     
     
