--- a/denteez2/styles/styles.scss
+++ b/denteez2/styles/styles.scss
@@ -384,7 +384,7 @@
             .modalWindow {
                 position: relative;
                 background: white;
-                top: -1500px;
+                top: -1000px;
                 z-index: 100;
                 border-radius: 15px;
                 box-shadow: 0px 0px 33px 0px #000000;
@@ -447,16 +447,7 @@
                 top: 12px;
                 position: relative;
             }
-            /*.column__center__block:nth-child(2),
-            .column__center__block:nth-child(5),
-            .column__center__block:nth-child(8),
-            .column__center__block:nth-child(11),
-            .column__center__block:nth-child(14),
-            .column__center__block:nth-child(17),
-            .column__center__block:nth-child(20) {
-                margin-right:3.7%;// 18px;
-                margin-left:3%;// 15px;
-            }*/
+            
             .column__center__block {
                 margin-right: 3%;
             }
@@ -472,23 +463,7 @@
                 border-radius: 5px;
                 margin-top: 6px;
                 
-               /* .column__center__block-search:nth-child(3),
-            .column__center__block-search:nth-child(6),
-            .column__center__block-search:nth-child(9),
-            .column__center__block-search:nth-child(12),
-            .column__center__block-search:nth-child(15),
-            .column__center__block-search:nth-child(18),
-            .column__center__block-search:nth-child(21),
-            .column__center__block-search:nth-child(24),
-            .column__center__block-search:nth-child(27),
-            .column__center__block-search:nth-child(30),
-            .column__center__block-search:nth-child(33),
-            .column__center__block-search:nth-child(36),
-            .column__center__block-search:nth-child(39){
-                margin-right: 18px;
-                margin-left: 15px;
-            }*/
-                
+               
                 .column__center__block-search {
                     display: inline-block;
                     text-align: center;
@@ -558,11 +533,15 @@
                 border: 1px solid #e0e2e6;
                 border-radius: 5px;
                 margin-top: 6px;
+                
+                
                 .clearfix::after {
                     content: "";
                     display: table;
                     clear: both;
                 }
+                .col__center-wrp {
+                    margin: 0 auto;
                 .column__center__block:hover .rectangle,
                 .rectangle:hover {
                     background: #f4f7fb;
@@ -572,8 +551,7 @@
                 .rectangle:hover .column__center__block-name
                 {
                     color:#89a762;
-                    
-                    
+                  
                 }
                 .column__center__block {
                     display: inline-block;
@@ -583,7 +561,8 @@
                     //width: 100%;
                     //min-width: 75px;
                     margin-bottom:1%;// 15px;
-                    margin-right: 3%;                    
+                    margin-right: 3%; 
+                    
 
                     .column__center__block-name {
                         //display: inline-block;
@@ -745,8 +724,7 @@
                     
                 }
                 
-                
-            }
+                }}
         }//END COLUMN CENTER
         //COLUMN RIGHT///////////////////////////////
         .column__right {
@@ -946,4 +924,114 @@
           background-image: url('../img/logo2x.png');
           background-size: 130px 40px;
      }
+}
+
+
+
+@media only screen and (max-device-width:1146px) {
+   
+        
+        .wrapper{ 
+            .content{ 
+                .content-wrap{ 
+                    .column__center{
+                        .wrapper__search {
+                            .col__search-wrp {
+                                display: block;
+                                width: 450px;
+                                margin: 0 auto;
+                                
+                                .column__center__block-search:nth-child(3n) {
+                                    margin-right: 0;
+                                }
+                                
+                            }
+                        }
+                        .column__center-wrap{ 
+                            .col__center-wrp{
+                                display: block;
+                                width: 450px;
+                                margin: 0 auto;
+                                 .column__center__block:nth-child(3n) {
+                                    margin-right: 0;
+                                }
+                            }
+                            
+                        }
+                    }
+                }
+            }
+    }
+}
+
+@media only screen and (min-device-width:1146px) and (max-device-width:1329px) {
+   
+        
+        .wrapper { 
+            .content { 
+                .content-wrap { 
+                    .column__center { 
+                        .wrapper__search {
+                            .col__search-wrp {
+                                display: block;
+                                width: 620px;
+                                margin: 0 auto;
+                                
+                                .column__center__block-search:nth-child(4n) {
+                                    margin-right: 0;
+                                }
+                                
+                            }
+                        }
+                        .column__center-wrap { 
+                            .col__center-wrp {
+                                display: block;
+                                width: 620px;
+                                margin: 0 auto;
+                                 .column__center__block:nth-child(4n) {
+                                    margin-right: 0;
+                                }
+                            }
+                           
+                        }
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (min-device-width:1330px)  {
+   
+        
+        .wrapper{ 
+            .content{ 
+                .content-wrap{ 
+                    .column__center{
+                        .wrapper__search {
+                            .col__search-wrp {
+                                display: block;
+                                width: 810px;
+                                margin: 0 auto;
+                                
+                                .column__center__block-search:nth-child(5n) {
+                                    margin-right: 0;
+                                }
+                                
+                            }
+                        }
+                        .column__center-wrap{ 
+                            .col__center-wrp{
+                                display: block;
+                                width: 810px;
+                                margin: 0 auto;
+            
+                                 .column__center__block:nth-child(5n) {
+                                    margin-right: 0;
+                                }
+                            }
+                        }
+                    }
+            }
+        }
+    }
 }
