--- a/denteez2/styles/styles.css
+++ b/denteez2/styles/styles.css
@@ -297,49 +297,63 @@
           margin-right: 3%; }
         .wrapper .content .content-wrap .column__center .wrapper__search {
           display: none;
-          padding-left: 13px;
+          /*padding-left: 13px;
           padding-top: 15px;
-          padding-bottom: 15px;
+          padding-bottom: 15px;*/
+          padding: 3%;
           border: 1px solid #e0e2e6;
           border-radius: 5px;
           margin-top: 6px; }
-          .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search {
-            display: inline-block;
-            text-align: center;
-            float: left;
-            width: 140px;
-            margin-bottom: 15px;
-            margin-right: 3%; }
-            .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search .clearfix::after {
-              content: "";
-              display: table;
-              clear: both; }
-            .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search .rectangle-search {
-              height: 80px;
-              width: 80px;
-              padding: 35px 29px 23px 29px;
-              border: 1px solid #e0e2e6; }
-              .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search .rectangle-search .link__block-search {
-                display: inline-block; }
-                .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search .rectangle-search .link__block-search img {
-                  height: 72px;
-                  width: 72px; }
-            .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search span {
-              display: block;
-              width: 120px;
-              height: 44px;
-              padding-top: 16px;
-              font-size: 12px;
-              letter-spacing: 0.3px;
-              white-space: nowrap;
-              overflow: hidden;
-              text-overflow: ellipsis; }
-          .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search:hover .rectangle-search,
-          .wrapper .content .content-wrap .column__center .wrapper__search .rectangle-search:hover {
-            background: #f4f7fb; }
-          .wrapper .content .content-wrap .column__center .wrapper__search .column__center__block-search:hover .name__block-search,
-          .wrapper .content .content-wrap .column__center .wrapper__search .rectangle-search:hover .name__block-search {
-            color: #89a762; }
+          .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp {
+            margin: 0 auto; }
+            .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search {
+              display: inline-block;
+              text-align: center;
+              float: left;
+              width: 140px;
+              margin-bottom: 1%;
+              margin-right: 3%; }
+              .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search .clearfix::after {
+                content: "";
+                display: table;
+                clear: both; }
+              .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search .rectangle-search {
+                /*height: 80px;
+                width: 80px;
+                padding: 35px 29px 23px 29px ;
+                border: 1px solid #e0e2e6;*/
+                border: 1px solid #e0e2e6;
+                /*width: 140px;
+                height: 140px;
+                margin: auto;
+                overflow: hidden;*/
+                width: 138px;
+                height: 138px;
+                margin: auto;
+                overflow: hidden; }
+                .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search .rectangle-search .link__block-search {
+                  display: inline-block;
+                  height: 69px;
+                  width: 69px;
+                  margin-top: 25%; }
+                  .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search .rectangle-search .link__block-search img {
+                    height: 69px;
+                    width: 69px; }
+              .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search span {
+                display: block;
+                width: 90%;
+                padding-top: 16px;
+                font-size: 12px;
+                letter-spacing: 0.3px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis; }
+            .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:hover .rectangle-search,
+            .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .rectangle-search:hover {
+              background: #f4f7fb; }
+            .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:hover .name__block-search,
+            .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .rectangle-search:hover .name__block-search {
+              color: #89a762; }
         .wrapper .content .content-wrap .column__center .column__center-wrap {
           padding: 3%;
           border: 1px solid #e0e2e6;
@@ -601,7 +615,7 @@
     display: block;
     width: 450px;
     margin: 0 auto; }
-    .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:nth-child(3n) {
+    .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:nth-child(3n+1) {
       margin-right: 0; }
   .wrapper .content .content-wrap .column__center .column__center-wrap .col__center-wrp {
     display: block;
@@ -614,7 +628,7 @@
     display: block;
     width: 620px;
     margin: 0 auto; }
-    .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:nth-child(4n) {
+    .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:nth-child(4n+1) {
       margin-right: 0; }
   .wrapper .content .content-wrap .column__center .column__center-wrap .col__center-wrp {
     display: block;
@@ -626,9 +640,10 @@
   .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp {
     display: block;
     width: 810px;
-    margin: 0 auto; }
-    .wrapper .content .content-wrap .column__center .wrapper__search .col__search-wrp .column__center__block-search:nth-child(5n) {
-      margin-right: 0; }
+    margin: 0 auto;
+    /*.column__center__block-search:nth-child(6n) {
+        margin-right: 0;
+    }*/ }
   .wrapper .content .content-wrap .column__center .column__center-wrap .col__center-wrp {
     display: block;
     width: 810px;
