--- a/denteez2/styles/styles.scss
+++ b/denteez2/styles/styles.scss
@@ -456,20 +456,23 @@
             /////SEARCH//////////////////////
             .wrapper__search {
                 display: none;
-                padding-left: 13px;
+                /*padding-left: 13px;
                 padding-top: 15px;
-                padding-bottom: 15px;
+                padding-bottom: 15px;*/
+                padding: 3%;
                 border: 1px solid #e0e2e6;
                 border-radius: 5px;
                 margin-top: 6px;
                 
+                .col__search-wrp {
+                    margin: 0 auto;
                
                 .column__center__block-search {
                     display: inline-block;
                     text-align: center;
                     float: left;
                     width: 140px;
-                    margin-bottom: 15px;
+                    margin-bottom:1%;// 15px;
                     margin-right: 3%;
                     
                     .clearfix::after {
@@ -481,26 +484,37 @@
             
                     
                     .rectangle-search {
-                        height: 80px;
+                        /*height: 80px;
                         width: 80px;
                         padding: 35px 29px 23px 29px ;
+                        border: 1px solid #e0e2e6;*/
                         border: 1px solid #e0e2e6;
+                        /*width: 140px;
+                        height: 140px;
+                        margin: auto;
+                        overflow: hidden;*/
+                        width: 138px;
+                        height: 138px;
+                        margin: auto;
+                        overflow: hidden;
                         
                         .link__block-search {
                             display: inline-block;
-                            
+                            height: 69px;
+                                width: 69px;
+                            margin-top: 25%;
                             
                             img {
-                                height: 72px;
-                                width: 72px;
+                                height: 69px;
+                                width: 69px;
                             }
                         }
                     }
                     
                     span {
                         display:block;
-                        width: 120px;
-                        height: 44px;
+                        width: 90%;
+                        //height: 44px;
                         padding-top: 16px;
                         font-size: 12px;
                         letter-spacing: 0.3px;
@@ -526,7 +540,7 @@
                     
                 }
                 
-            }
+                }}
             /////END SEARCH//////////////////
             .column__center-wrap {
                 padding: 3%;
@@ -941,11 +955,12 @@
                                 width: 450px;
                                 margin: 0 auto;
                                 
-                                .column__center__block-search:nth-child(3n) {
+                                .column__center__block-search:nth-child(3n+1) {
                                     margin-right: 0;
                                 }
                                 
                             }
+                            
                         }
                         .column__center-wrap{ 
                             .col__center-wrp{
@@ -962,6 +977,7 @@
                 }
             }
     }
+    
 }
 
 @media only screen and (min-device-width:1146px) and (max-device-width:1329px) {
@@ -977,7 +993,7 @@
                                 width: 620px;
                                 margin: 0 auto;
                                 
-                                .column__center__block-search:nth-child(4n) {
+                                .column__center__block-search:nth-child(4n+1) {
                                     margin-right: 0;
                                 }
                                 
@@ -1013,9 +1029,9 @@
                                 width: 810px;
                                 margin: 0 auto;
                                 
-                                .column__center__block-search:nth-child(5n) {
+                                /*.column__center__block-search:nth-child(6n) {
                                     margin-right: 0;
-                                }
+                                }*/
                                 
                             }
                         }
