--- a/denteez2/styles/styles.scss
+++ b/denteez2/styles/styles.scss
@@ -952,7 +952,8 @@
                         .wrapper__search {
                             .col__search-wrp {
                                 display: block;
-                                width: 450px;
+                                max-width: 450px;
+                                width: 100%;
                                 margin: 0 auto;
                                 
                                 .column__center__block-search:nth-child(3n+1) {
@@ -965,7 +966,8 @@
                         .column__center-wrap{ 
                             .col__center-wrp{
                                 display: block;
-                                width: 450px;
+                                max-width: 450px;
+                                width: 100%;
                                 margin: 0 auto;
                                  .column__center__block:nth-child(3n) {
                                     margin-right: 0;
@@ -990,7 +992,8 @@
                         .wrapper__search {
                             .col__search-wrp {
                                 display: block;
-                                width: 620px;
+                                max-width: 620px;
+                                width: 100%;
                                 margin: 0 auto;
                                 
                                 .column__center__block-search:nth-child(4n+1) {
@@ -1002,7 +1005,8 @@
                         .column__center-wrap { 
                             .col__center-wrp {
                                 display: block;
-                                width: 620px;
+                                max-width: 620px;
+                                width: 100%;
                                 margin: 0 auto;
                                  .column__center__block:nth-child(4n) {
                                     margin-right: 0;
@@ -1026,7 +1030,8 @@
                         .wrapper__search {
                             .col__search-wrp {
                                 display: block;
-                                width: 810px;
+                                max-width: 810px;
+                                width: 100%;
                                 margin: 0 auto;
                                 
                                 /*.column__center__block-search:nth-child(6n) {
@@ -1038,7 +1043,8 @@
                         .column__center-wrap{ 
                             .col__center-wrp{
                                 display: block;
-                                width: 810px;
+                                max-width: 810px;
+                                width: 100%;
                                 margin: 0 auto;
             
                                  .column__center__block:nth-child(5n) {
